cargo-features = ["edition2021"]

[package]
name = "ferrous"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
thiserror = "1.0.31"
anyhow = "1.0.57"
byteorder = "1.4.3"
serde = "1.0.137"
num-traits = "0.2.15"
aes = "0.8.1"
cfb8 = "0.8.1"
bytes = "1.1.0"
flate2 = "1.0.24"
colored = "2.0.0"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]